@startuml
hide circle
skinparam classAttributeIconSize 0

interface ReadOnlyRequirement {
    +isFulfilled()
    +isSameRequirement()
    +equals()
}

class Requirement {
    +addModule()
    +setModule()
    +removeModule()
    -computeCredits()
}

class RequirementCode {
    -value
    +isValidRequirementCode()
}

class Title {
    -value
    +isValidTitle()
}

class Credits {
    -creditsRequired
    -creditsAssigned
    -creditsFulfilled
    +isValidCredits()
    +isFulfilled()
}

class UniqueModuleList {
    -internalList
    -internalUnmodifiableList
    +add()
    +set()
    +remove()
    +contains()
    +getByModuleCode()
    +asUnmodifiableObservableList()
}

ReadOnlyRequirement <|-- Requirement
Requirement *-- "1" RequirementCode
Requirement *-- "1" Title
Requirement *-- "1" Credits
Requirement *-- "1" UniqueModuleList
@enduml
